--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def foo(): print(\"gfg\")"
+    "def foo(): print(\"gfasdadasdg\")"
    ]
   },
   {
